# canvas-web-worker

./: README.md  bun.lockb  package.json  vite.config.ts
my-crate/: Cargo.toml
my-crate/src/: lib.rs
src/: App.svelte  app.css
src/lib/: Heat.svelte  heatmap-worker.ts
src/lib/learn/: Demo.svelte  DemoTmp.svelte
src/model/: Particle.ts
